--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <div class="game">
-        <h1 id="_h">Rock Paper Sissors | Enhanced Edition</h1>
+        <h1 id="_h">Rock Paper Sissors</h1>
         <div id="choices">
             <button id="rock">✊</button>
             <button id="paper">✋</button>
